--- a/zip/src/main/resources/application.properties
+++ b/zip/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.datasource.url=jdbc:h2:file:C:/Users/Gabriel/test
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled=true
+spring.datasource.url=jdbc:postgresql://roundhouse.proxy.rlwy.net:54898/railway
+spring.datasource.username=postgres
+spring.datasource.password=3FaFb4E*GC4CD-1F13A1EcAceAfdABb6
 spring.jpa.hibernate.ddl-auto=update
